--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
               <input type="email" id="email" pattern=".+@perscholas\.org" size="30" required />
             </form>
+          <div id="kittens"></div>    
       </main>
+      
     <script src="script.js"></script>
 </body>
 </html>
