--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
               <input type="email" id="email" pattern=".+@perscholas\.org" size="30" required />
             </form>
-          <div id="kittens"></div>    
+          <div id="kittens"></div> 
+          <div id ="baby-animal-prozac"></div>   
       </main>
       
     <script src="script.js"></script>
